2010-04-21  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
        https://bugs.webkit.org/show_bug.cgi?id=37765

        Third time is the charm.  I've fixed all the
        new-run-webkit-tests regressions from previous attempts.

        I fixed the queue to not ignore Tor as a reviwer in r57531,
        but instead it throws an exception every time his name is in a patch.

        This fixes our Executive.run_command code to work around a Popen
        bug http://bugs.python.org/issue5290 whereby python versions before 2.6
        do not correctly handle unicode objects as input or output to
        Popen.communicate.

        Following the advice of:
        http://farmdev.com/talks/unicode/
        I have changed all of webkitpy to use unicode() objects as strings
        instead of str objects (which in Python 3 are renamed "bytes").

        String literals were left as "foo" instead of converting to u"foo"
        as u"foo" is only required if the string has a non-ascii code point.
        Python is smart about comparing str() and unicode() values and will
        log an error to the console if the comparison is ever invalid.

        Executive.run* now correctly accept and return unicode() objects.
        I attempted to fix all the places that we call .write() to make sure we
        encode any unicode() objects into utf-8.

        I removed several uses of StringIO.  StringIO should generally always be
        passed a unicode() value.

        Likewise I replaced most calls to open() with codecs.open().
        codecs.open() matches Python 3 open semantics in requiring an encoding
        parameter.  Files opened with codecs.open() with a unicode-compatible
        encoding will vend unicode() objects from their read() calls, like how
        StringIO created with a unicode() object will do.
